# test-task-wm

./: pyproject.toml  readme.md
studstat/: __main__.py  models.py  parsers.py  report.py
tests/e2e/: main_test.py
tests/unit/: parser_test.py  report_test.py
