[project]
name = "studstat"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "tabulate (>=0.10.0,<0.11.0)"
]


[tool.pytest]
pythonpath = [ "." ]
testpaths = [ "tests/unit", "tests/e2e" ]
markers = [ "asyncio" ]
addopts = [
    "--import-mode=importlib",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
studstat = "studstat.__main__:main"


[tool.ruff.lint]
select = [ "E", "F", "I", "RUF" ]
exclude = [ "tests/**" ]
fixable = [ "I", "RUF" ]


[tool.ruff.lint.isort]
known-first-party = ["studstat"]


[dependency-groups]
tests = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
